[package]
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
name = "query-crates-index"
version = "0.1.0"

[dependencies]
cargo = "0.24.0"
daggy = "0.5.0"
failure = "0.1.1"
fallible-iterator = "0.1.4"
semver = { version = "0.9.0", features = ["serde"] }
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
walkdir = "2.0.1"
